--- a/Deep Learning/basic_python_ml.ipynb
+++ b/Deep Learning/basic_python_ml.ipynb
@@ -141,15 +141,50 @@
    "id": "1a5a24f663ed2a7f"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T04:47:34.270440Z",
+     "start_time": "2025-09-23T04:47:34.264847Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "num_epochs = 3\n",
-    "num_batches_per_epoch = 5"
+    "num_batches_per_epoch = 5\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    print('epoch', epoch)\n",
+    "    for batch in range(num_batches_per_epoch):\n",
+    "        print('     batch', batch)"
    ],
-   "id": "612b203d9234329a",
-   "execution_count": null
+   "id": "7d98d36cab8264b9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0\n",
+      "     batch 0\n",
+      "     batch 1\n",
+      "     batch 2\n",
+      "     batch 3\n",
+      "     batch 4\n",
+      "epoch 1\n",
+      "     batch 0\n",
+      "     batch 1\n",
+      "     batch 2\n",
+      "     batch 3\n",
+      "     batch 4\n",
+      "epoch 2\n",
+      "     batch 0\n",
+      "     batch 1\n",
+      "     batch 2\n",
+      "     batch 3\n",
+      "     batch 4\n"
+     ]
+    }
+   ],
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -157,7 +192,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "7d98d36cab8264b9"
+   "id": "3cca7306cbb19682"
   }
  ],
  "metadata": {
