--- a/Deep Learning/basic_python_ml.ipynb
+++ b/Deep Learning/basic_python_ml.ipynb
@@ -20,6 +20,8 @@
     }
    },
    "source": [
+    "from torch.ao.ns.fx.n_shadows_utils import create_one_transformed_and_logged_copy_of_subgraph\n",
+    "\n",
     "age_list = [10,50,30,25,60,90]\n",
     "sum_age = 0\n",
     "max_age = float('-inf')\n",
@@ -303,31 +305,35 @@
    "execution_count": 25
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T16:20:07.260791Z",
+     "start_time": "2025-09-23T16:20:07.249940Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "b0429f438428bea7"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": [
-    "%%latex\n",
-    "\\documentclass{article}\n",
-    "\\usepackage{amsmath}\n",
-    "\\begin{document}\n",
-    "\\section*{Example Section}\n",
-    "This is a more complex LaTeX example, including a numbered equation:\n",
-    "\\begin{equation}\n",
-    "E=mc^2\n",
-    "\\label{eq:einstein}\n",
-    "\\end{equation}\n",
-    "Equation \\ref{eq:einstein} is famously known as Einstein's mass-energy equivalence.\n",
-    "\\end{document}"
+    "# Navgating a matrix\n",
+    "\n",
+    "matrix = [[1,2,3],[4,5,6]]\n",
+    "rows =2\n",
+    "cols =3\n",
+    "for row in range(rows):\n",
+    "    for col in range(cols):\n",
+    "        if matrix[row][col] == 2:\n",
+    "            print(matrix[row][col])\n"
    ],
-   "id": "1fedb6fcf53796fe"
+   "id": "f57dab6331d00715",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -335,7 +341,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f57dab6331d00715"
+   "id": "a1b5622e823e7fd3"
   }
  ],
  "metadata": {
