--- a/Deep Learning/basic_python_ml.ipynb
+++ b/Deep Learning/basic_python_ml.ipynb
@@ -316,12 +316,12 @@
     "# Navgating a matrix\n",
     "\n",
     "matrix = [[1,2,3],[4,5,6]]\n",
-    "rows =2\n",
-    "cols =3\n",
+    "rows = 2\n",
+    "cols = 3\n",
     "for row in range(rows):\n",
     "    for col in range(cols):\n",
     "        if matrix[row][col] == 2:\n",
-    "            print(matrix[row][col])\n"
+    "            print(matrix[row][col])"
    ],
    "id": "f57dab6331d00715",
    "outputs": [
