--- a/Deep Learning/basic_python_ml.ipynb
+++ b/Deep Learning/basic_python_ml.ipynb
@@ -218,6 +218,93 @@
     }
    ],
    "execution_count": 30
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Loss function in ML/DL is a mathematical function which find the difference between the ground truth and predicted value. The goal of the model is to **minimize** teh loss and achieve better performance.",
+   "id": "aa98508d023a29db"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-26T08:02:41.297166Z",
+     "start_time": "2025-09-26T08:02:41.288882Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def mse_loss(y_true, y_pred):\n",
+    "    return 0.5 * np.sum((y_true - y_pred)**2)\n"
+   ],
+   "id": "78306719600b8a2f",
+   "outputs": [],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-26T08:02:42.845159Z",
+     "start_time": "2025-09-26T08:02:42.842775Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def mae_loss(y_true, y_pred):\n",
+    "    return 0.5 * np.sum(np.abs(y_true - y_pred))"
+   ],
+   "id": "36711d09b88200b2",
+   "outputs": [],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-26T08:03:39.197252Z",
+     "start_time": "2025-09-26T08:03:39.185573Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = [[1,1.2],[4,5.5],[3.2,3.2]]\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "y_true = df[0]\n",
+    "y_pred = df[1]\n",
+    "\n",
+    "mse_loss_val = mse_loss(y_true, y_pred)\n",
+    "print(mse_loss_val)\n",
+    "\n",
+    "mae_loss_val = mae_loss(y_true, y_pred)\n",
+    "print(mae_loss_val)\n"
+   ],
+   "id": "19254c998c5bc4ef",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.145\n",
+      "0.85\n"
+     ]
+    }
+   ],
+   "execution_count": 40
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3f29e97352b1d4dd"
   }
  ],
  "metadata": {
