--- a/Deep Learning/basic_python_ml.ipynb
+++ b/Deep Learning/basic_python_ml.ipynb
@@ -264,8 +264,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-26T08:03:39.197252Z",
-     "start_time": "2025-09-26T08:03:39.185573Z"
+     "end_time": "2025-09-26T08:06:56.936204Z",
+     "start_time": "2025-09-26T08:06:56.903340Z"
     }
    },
    "cell_type": "code",
@@ -280,10 +280,10 @@
     "y_pred = df[1]\n",
     "\n",
     "mse_loss_val = mse_loss(y_true, y_pred)\n",
-    "print(mse_loss_val)\n",
+    "print('MSE: ' ,mse_loss_val)\n",
     "\n",
     "mae_loss_val = mae_loss(y_true, y_pred)\n",
-    "print(mae_loss_val)\n"
+    "print('MAE: ' ,mae_loss_val)\n"
    ],
    "id": "19254c998c5bc4ef",
    "outputs": [
@@ -291,12 +291,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.145\n",
-      "0.85\n"
+      "MSE:  1.145\n",
+      "MAE:  0.85\n"
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 41
   },
   {
    "metadata": {},
